# lobster-translator

./: README.md  pyproject.toml
lobster_translator/: helpers.py  io.py
lobster_translator/helpers/: __init__.py
lobster_translator/io/: __init__.py  carfile_to_df.py  listfile_to_df.py
tests/: test_helpers.py
