[tool.poetry]
name = "lobster-translator"
version = "0.1.0"
description = ""
authors = ["rbrtrss <roberto.rousse@gmail.com>"]
readme = "README.md"
packages = [{include = "lobster_translator"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
